add new meta tags and new section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
+  <title>Oyna</title>
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Google -->
+  <meta name="google-site-verification" content="xnrkEfCIngnJzvAAFmne3nA1okjknAaHAdsMH6slK7M" />
+  <meta name="googlebot" id="googlebot" content="index, follow">
+
+  <!-- Yandeks -->
+  <meta name="yandex-verification" content="0d98a88b237bac56" />
+  <meta name="yandex-verification" id="yandex-verification" content="index, follow">
+  <meta name="yandex" id="yandex" content="index, follow">
+
+  <!-- favicon image -->
+  <link rel="shortcut icon" href="/src/assets/img/fav1con.png" type="image/x-icon">
+  <link rel="icon" href="/src/assets/img/fav1con.png" type="image/x-icon">
 
   <!-- font-family -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
