add new sections and change favicon

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta name="yandex" id="yandex" content="index, follow">
 
   <!-- favicon image -->
-  <link rel="shortcut icon" href="/src/assets/img/fav1con.png" type="image/x-icon">
-  <link rel="icon" href="/src/assets/img/fav1con.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
+  <link rel="icon" href="/src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
 
   <!-- font-family -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
