--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oyna</title>
 
+  <link rel="canonical" href="https://example.com">
+  <meta name="description"
+    content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin. Va siz bu saytda bizning xizmatlarimiz bilan to'liq tanishib chiqishingiz mumkin.">
+  <meta name="keywords"
+    content="rom, ro'm, deraza, oyna, oynalsh, kvartira, uy, Axmadillo, axmadillo, Ahmadilo, ahmadillo, aliyev, Aliyev,Axmadillo Aliyev, axmadillo aliyev,ahmadillo aliyev, Ahmadilo Aliyev">
+  <meta property="og:title" content="Oyna">
+  <meta property="og:description" content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin.">
+  <meta property="og:image" content="./src/assets/img/fav1con1-removebg-preview.png">
+  <meta property="og:url" content="https://www.example.com">
+  <meta name="author" content="Axmadillo Aliyev">
+  <meta name="referrer" content="no-referrer">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="robots" content="index, follow">
 
   <!-- Google -->
   <meta name="google-site-verification" content="xnrkEfCIngnJzvAAFmne3nA1okjknAaHAdsMH6slK7M" />
