add google adsense and meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oyna</title>
 
@@ -13,13 +14,14 @@
   <meta name="keywords"
     content="rom, ro'm, deraza, oyna, oynalsh, kvartira, uy, Axmadillo, axmadillo, Ahmadilo, ahmadillo, aliyev, Aliyev,Axmadillo Aliyev, axmadillo aliyev,ahmadillo aliyev, Ahmadilo Aliyev">
   <meta property="og:title" content="Oyna">
-  <meta property="og:description" content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin.">
+  <meta property="og:type" content="website" />
+  <meta property="og:description"
+    content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin.">
   <meta property="og:image" content="./src/assets/img/fav1con1-removebg-preview.png">
+  <meta property="og:image:type" content="image/png" />
   <meta property="og:url" content="https://www.example.com">
   <meta name="author" content="Axmadillo Aliyev">
   <meta name="referrer" content="no-referrer">
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="robots" content="index, follow">
 
   <!-- Google -->
@@ -45,6 +47,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
+  <!-- google adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4611912129342481"
+    crossorigin="anonymous"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X76DZG3P99"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-X76DZG3P99');
+  </script>
 </head>
 
 <body class="font-raleway text-mainBlack text-base">
