fixed meta tags

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oyna</title>
 
-  <link rel="canonical" href="https://example.com">
+  <link rel="canonical" href="https://oyna-expert.vercel.app/">
   <meta name="description"
     content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin. Va siz bu saytda bizning xizmatlarimiz bilan to'liq tanishib chiqishingiz mumkin.">
   <meta name="keywords"
     content="rom, ro'm, deraza, oyna, oynalsh, kvartira, uy, Axmadillo, axmadillo, Ahmadilo, ahmadillo, aliyev, Aliyev,Axmadillo Aliyev, axmadillo aliyev,ahmadillo aliyev, Ahmadilo Aliyev">
-  <meta property="og:title" content="Oyna">
+  <meta id="name" name="itemprop" content="Oyna / ro'm va deraza mahsulotlarini">
+  <meta property="og:title" content="Oyna - ro'm va oyna mahsulotlarini">
   <meta property="og:type" content="website" />
   <meta property="og:description"
     content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin.">
-  <meta property="og:image" content="./src/assets/img/fav1con1-removebg-preview.png">
-  <meta property="og:image:type" content="image/png" />
-  <meta property="og:url" content="https://www.example.com">
+  <meta property="og:url" content="https://oyna-expert.vercel.app" />
+  <meta property="og:image" content="https://oyna-expert.vercel.app/assets/logo-MdxnEV-T.svg">
+  <meta property="og:image:type" content="image/svg" />
+  <meta property="og:image:width" content="1036" />
+  <meta property="og:image:height" content="416" />
   <meta name="author" content="Axmadillo Aliyev">
   <meta name="referrer" content="no-referrer">
   <meta name="robots" content="index, follow">
@@ -34,8 +37,8 @@
   <meta name="yandex" id="yandex" content="index, follow">
 
   <!-- favicon image -->
-  <link rel="shortcut icon" href="/src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
-  <link rel="icon" href="/src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
+  <link rel="icon" href="./src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
 
   <!-- font-family -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
