--- a/index.html
+++ b/index.html
@@ -1,60 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uz">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Oyna</title>
 
-<head>
+		<link rel="canonical" href="https://oyna-expert.vercel.app/" />
+		<meta
+			name="description"
+			content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin. Va siz bu saytda bizning xizmatlarimiz bilan to'liq tanishib chiqishingiz mumkin."
+		/>
+		<meta
+			name="keywords"
+			content="rom, ro'm, deraza, oyna, oynalsh, kvartira, uy, Axmadillo, axmadillo, Ahmadilo, ahmadillo, aliyev, Aliyev,Axmadillo Aliyev, axmadillo aliyev,ahmadillo aliyev, Ahmadilo Aliyev"
+		/>
+		<meta
+			id="name"
+			name="itemprop"
+			content="Oyna / ro'm va deraza mahsulotlarini"
+		/>
+		<meta property="og:title" content="Oyna - ro'm va oyna mahsulotlarini" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:description"
+			content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin."
+		/>
+		<meta property="og:url" content="https://oyna-expert.vercel.app" />
+		<meta
+			property="og:image"
+			content="https://oyna-expert.vercel.app/assets/logo-MdxnEV-T.svg"
+		/>
+		<meta property="og:image:type" content="image/svg" />
+		<meta property="og:image:width" content="1036" />
+		<meta property="og:image:height" content="416" />
+		<meta name="author" content="Axmadillo Aliyev" />
+		<meta name="referrer" content="no-referrer" />
+		<meta name="robots" content="index, follow" />
 
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oyna</title>
+		<!-- Google -->
+		<meta
+			name="google-site-verification"
+			content="xnrkEfCIngnJzvAAFmne3nA1okjknAaHAdsMH6slK7M"
+		/>
+		<meta name="googlebot" id="googlebot" content="index, follow" />
 
-  <link rel="canonical" href="https://oyna-expert.vercel.app/">
-  <meta name="description"
-    content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin. Va siz bu saytda bizning xizmatlarimiz bilan to'liq tanishib chiqishingiz mumkin.">
-  <meta name="keywords"
-    content="rom, ro'm, deraza, oyna, oynalsh, kvartira, uy, Axmadillo, axmadillo, Ahmadilo, ahmadillo, aliyev, Aliyev,Axmadillo Aliyev, axmadillo aliyev,ahmadillo aliyev, Ahmadilo Aliyev">
-  <meta id="name" name="itemprop" content="Oyna / ro'm va deraza mahsulotlarini">
-  <meta property="og:title" content="Oyna - ro'm va oyna mahsulotlarini">
-  <meta property="og:type" content="website" />
-  <meta property="og:description"
-    content="Bu veb saytda siz o'z uyingiz uchun ro'm va oyna mahsulotlarini topishingiz mumkin.">
-  <meta property="og:url" content="https://oyna-expert.vercel.app" />
-  <meta property="og:image" content="https://oyna-expert.vercel.app/assets/logo-MdxnEV-T.svg">
-  <meta property="og:image:type" content="image/svg" />
-  <meta property="og:image:width" content="1036" />
-  <meta property="og:image:height" content="416" />
-  <meta name="author" content="Axmadillo Aliyev">
-  <meta name="referrer" content="no-referrer">
-  <meta name="robots" content="index, follow">
+		<!-- Yandeks -->
+		<meta name="yandex-verification" content="0d98a88b237bac56" />
+		<meta
+			name="yandex-verification"
+			id="yandex-verification"
+			content="index, follow"
+		/>
+		<meta name="yandex" id="yandex" content="index, follow" />
 
-  <!-- Google -->
-  <meta name="google-site-verification" content="xnrkEfCIngnJzvAAFmne3nA1okjknAaHAdsMH6slK7M" />
-  <meta name="googlebot" id="googlebot" content="index, follow">
+		<!-- favicon image -->
+		<link
+			rel="shortcut icon"
+			href="./src/assets/img/fav1con1-removebg-preview.png"
+			type="image/x-icon"
+		/>
+		<link
+			rel="icon"
+			href="./src/assets/img/fav1con1-removebg-preview.png"
+			type="image/x-icon"
+		/>
 
-  <!-- Yandeks -->
-  <meta name="yandex-verification" content="0d98a88b237bac56" />
-  <meta name="yandex-verification" id="yandex-verification" content="index, follow">
-  <meta name="yandex" id="yandex" content="index, follow">
+		<!-- font-family -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
-  <!-- favicon image -->
-  <link rel="shortcut icon" href="./src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
-  <link rel="icon" href="./src/assets/img/fav1con1-removebg-preview.png" type="image/x-icon">
-
-  <!-- font-family -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
